[package]
name = "cleaning-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow        = "1"
chrono        = { version = "0.4", features = ["serde"] }
chrono-tz     = "0.9"
mxbot-common  = { git = "https://github.com/PolynomialDivision/mxbot-common" }
matrix-sdk    = { version = "0.17", features = ["e2e-encryption", "sqlite", "automatic-room-key-forwarding"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
toml          = "0.8"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
