[package]
name = "cleaning-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow        = "1"
tempfile      = "3"
axum          = "0.7"
chrono        = { version = "0.4", features = ["serde"] }
chrono-tz     = "0.9"
hex           = "0.4"
mime          = "0.3"
rand          = "0.8"
sha2          = "0.10"
uuid          = { version = "1", features = ["v4", "v5"] }
mxbot-common  = { git = "https://github.com/PolynomialDivision/mxbot-common" }
matrix-sdk    = { version = "0.17", features = ["e2e-encryption", "sqlite", "automatic-room-key-forwarding"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
toml          = "0.8"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
matrix-sdk        = { git = "https://github.com/PolynomialDivision/matrix-rust-sdk", branch = "msc3952-mentions-encrypted" }
matrix-sdk-base   = { git = "https://github.com/PolynomialDivision/matrix-rust-sdk", branch = "msc3952-mentions-encrypted" }
matrix-sdk-common = { git = "https://github.com/PolynomialDivision/matrix-rust-sdk", branch = "msc3952-mentions-encrypted" }
matrix-sdk-crypto = { git = "https://github.com/PolynomialDivision/matrix-rust-sdk", branch = "msc3952-mentions-encrypted" }
matrix-sdk-sqlite = { git = "https://github.com/PolynomialDivision/matrix-rust-sdk", branch = "msc3952-mentions-encrypted" }
